# swtpm

./: configure.ac
man/man8/: swtpm-localca.8  swtpm.pod  swtpm_cert.8  swtpm_setup.8  swtpm_setup.pod
src/swtpm/: Makefile.am  ctrlchannel.c  ctrlchannel.h  cuse_tpm.c  swtpm.c  swtpm_chardev.c  tpmlib.c  tpmlib.h
src/swtpm_bios/: tpm_bios.c  tpm_bios.h
src/swtpm_setup/: swtpm_setup.sh.in
tests/: Makefile.am  test_tpm2_getcap  test_tpm2_hashing  test_tpm2_hashing2  test_tpm2_hashing3  test_tpm2_init  test_tpm2_locality  test_tpm2_probe  test_tpm2_savestate  test_tpm2_swtpm_bios  test_tpm2_wrongorder  test_tpm_probe
